unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Satisfaction_with_setup__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_setup__c</fullName>
    <label>Satisfaction with set-up and pre-work</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>