unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Satisfied_with_hotel_accomodations__c.field-meta.xml
<CustomField>
    <fullName>Satisfied_with_hotel_accomodations__c</fullName>
    <label>Satisfied with hotel accomodations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>