unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Scheduling_Setup_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Setup_Explanation__c</fullName>
    <label>Scheduling &amp; Setup Explanation</label>
    <type>TextArea</type>
</CustomField>