unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Scott_H_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Scott_H_Interesting_Addressed_Concerns__c</fullName>
    <label>Scott H: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>