unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Scott_H_Present_Interesting_Practical__c.field-meta.xml
<CustomField>
    <fullName>Scott_H_Present_Interesting_Practical__c</fullName>
    <label>Scott H: Present Interesting/Practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>