unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Scott_H_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Scott_H_Presenter_was_knowledgeable__c</fullName>
    <label>Scott H:Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>