unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Self_Assessment_Class_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Class_Contribution__c</fullName>
    <label>Self-Assessment: Class Contribution</label>
    <type>TextArea</type>
</CustomField>