unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Self_Assessment_Learning_Speed__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Learning_Speed__c</fullName>
    <label>Self-Assessment: Learning Speed</label>
    <type>TextArea</type>
</CustomField>