unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Set_up_and_pre_work_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Set_up_and_pre_work_Explanation__c</fullName>
    <label>20 Group Survey Setup &amp; Scheduling Expl</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>