unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Set_up_and_prework_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Set_up_and_prework_Explanation__c</fullName>
    <label>Set-up and pre-work - Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>