unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Set_up_Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Set_up_Difficulty__c</fullName>
    <label>Set-up Difficulty</label>
    <type>TextArea</type>
</CustomField>