unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Share_learning_experience_at_dealership__c.field-meta.xml
<CustomField>
    <fullName>Share_learning_experience_at_dealership__c</fullName>
    <label>Share learning experience at dealership</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>