unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Staff_was_professional_accomodating__c.field-meta.xml
<CustomField>
    <fullName>Staff_was_professional_accomodating__c</fullName>
    <label>Staff was professional &amp; accomodating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>