unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Steve__c.field-meta.xml
<CustomField>
    <fullName>Steve__c</fullName>
    <label>Steve:Presentation Interesting/Practical</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>