unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Steve_E_Interesting_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Steve_E_Interesting_Addressed_Concerns__c</fullName>
    <label>Steve E: Interesting/Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>