unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Steve_E_Met_Training_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Steve_E_Met_Training_Objectives__c</fullName>
    <label>Steve E: Met Training Objectives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>