unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Steve_E_Presenter_was_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Steve_E_Presenter_was_knowledgeable__c</fullName>
    <label>Steve E: Presenter was knowledgeable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>