unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Steve_E_Prestations_Interesting_Practi__c.field-meta.xml
<CustomField>
    <fullName>Steve_E_Prestations_Interesting_Practi__c</fullName>
    <label>Steve E:Pres Interesting/Practicali</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>