unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Survey_Completed_on__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed_on__c</fullName>
    <label>Survey Completed on</label>
    <length>100</length>
    <type>Text</type>
</CustomField>