unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Test_Autofill_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Test_Autofill_Group_Number__c</fullName>
    <label>Test Autofill Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>