unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Test_Drive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Comments__c</fullName>
    <label>Test Drive Comments</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>