unpackaged/main/default/objects/GetFeedBack_Results__c/fields/The_meeting_and_all_activities__c.field-meta.xml
<CustomField>
    <fullName>The_meeting_and_all_activities__c</fullName>
    <inlineHelpText>The meeting and all activities were properly communicated, executed, and met or exceeded the expectations of the group.</inlineHelpText>
    <label>The meeting and all activities</label>
    <length>50</length>
    <type>Text</type>
</CustomField>