unpackaged/main/default/objects/GetFeedBack_Results__c/fields/The_meeting_and_all_EXPL__c.field-meta.xml
<CustomField>
    <fullName>The_meeting_and_all_EXPL__c</fullName>
    <inlineHelpText>Explanation: The meeting and all activities were properly communicated, executed, and met or exceeded the expectations of the group.</inlineHelpText>
    <label>The meeting and all EXPL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>