unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Tom_M_Interested_Addressed_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Tom_M_Interested_Addressed_Concerns__c</fullName>
    <label>Tom M: Interested &amp; Addressed Concerns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>