unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Tom_M_interesting_practical__c.field-meta.xml
<CustomField>
    <fullName>Tom_M_interesting_practical__c</fullName>
    <label>Tom M:interesting/practical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>