unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Topic_Relevancy__c.field-meta.xml
<CustomField>
    <fullName>Topic_Relevancy__c</fullName>
    <label>Topic Relevancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>