unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Topic_Relevancy_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Topic_Relevancy_Explanation__c</fullName>
    <label>Topic Relevancy Explanation</label>
    <type>TextArea</type>
</CustomField>