unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Training_met_my_expectations__c.field-meta.xml
<CustomField>
    <fullName>Training_met_my_expectations__c</fullName>
    <label>Training met my expectations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>