unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Training_Presentation_Topic_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Training_Presentation_Topic_Improvement__c</fullName>
    <label>Training Presentation for Improvement</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>