unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Training_Presentation_Topic_Most_Useful__c.field-meta.xml
<CustomField>
    <fullName>Training_Presentation_Topic_Most_Useful__c</fullName>
    <label>Training Presentation/Topic Most Useful</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>