unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Using_a_Comparable_Training_Program__c.field-meta.xml
<CustomField>
    <fullName>Using_a_Comparable_Training_Program__c</fullName>
    <label>Using a Comparable Training Program</label>
    <type>TextArea</type>
</CustomField>