unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Value_of_Program_to_Improve_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Program_to_Improve_Dealership__c</fullName>
    <label>Value of Program to Improve Dealership</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>