unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Wants_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Wants_to_be_Contacted__c</fullName>
    <label>Wants to be Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>