unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Were_your_skills_improved__c.field-meta.xml
<CustomField>
    <fullName>Were_your_skills_improved__c</fullName>
    <label>Were your skills improved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>