unpackaged/main/default/objects/GetFeedBack_Results__c/fields/What_are_you_hoping_to_learn__c.field-meta.xml
<CustomField>
    <fullName>What_are_you_hoping_to_learn__c</fullName>
    <label>What are you hoping to learn</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>