unpackaged/main/default/objects/GetFeedBack_Results__c/fields/What_would_you_like_us_to_know_about_you__c.field-meta.xml
<CustomField>
    <fullName>What_would_you_like_us_to_know_about_you__c</fullName>
    <label>What would you like us to know about you</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>