unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Would_you_recommend_NCM_Associates__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_NCM_Associates__c</fullName>
    <inlineHelpText>Would you recommend NCM Associates products and services to your peer group?</inlineHelpText>
    <label>Would you recommend NCM Associates</label>
    <length>50</length>
    <type>Text</type>
</CustomField>