unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Would_you_recommend_NCM_Associates_Expl__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_NCM_Associates_Expl__c</fullName>
    <inlineHelpText>Explanation: Would you recommend NCM Associates products and services to your peer group?</inlineHelpText>
    <label>Would you recommend NCM Associates Expl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>