unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipName>GetFeedBack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>