unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Number__c</fullName>
    <label>20 Group Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>