unpackaged/main/default/objects/GetFeedBack_Results__c/fields/x20_group_number_c__c.field-meta.xml
<CustomField>
    <fullName>x20_group_number_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X20 Group Number c</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipName>x20_group_number_c</relationshipName>
    <type>Lookup</type>
</CustomField>