unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_Meeting_Admin_and_Event__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_Meeting_Admin_and_Event__c</fullName>
    <label>20 Group Survey Meeting Admin and Event</label>
    <length>2</length>
    <type>Text</type>
</CustomField>