unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_Meeting_Admin_Event_Exp__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_Meeting_Admin_Event_Exp__c</fullName>
    <label>20 Group Survey Meeting Admin Event Exp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>