unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_Mod_Preparedness_Expl__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_Mod_Preparedness_Expl__c</fullName>
    <label>20 Group Survey Mod Preparedness Expl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>