unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_Mod_Preparedness_Txt__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_Mod_Preparedness_Txt__c</fullName>
    <label>20 Group Survey Mod Preparedness Txt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strongly agree</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Neither agree nor disagree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
            <value>
                <fullName>Strongly disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>