unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_NCM_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_NCM_Responsiveness__c</fullName>
    <label>20 Group Survey NCM Responsiveness</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>