unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_NCM_Responsiveness_Expl__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_NCM_Responsiveness_Expl__c</fullName>
    <description>This field is fed from Getfeedback 20 Group Surveys</description>
    <label>20 Group Survey NCM Responsiveness Expl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>