unpackaged/main/default/objects/GetFeedBack_Results__c/fields/X20_Group_Survey_Post_Meeting_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Survey_Post_Meeting_Follow_Up__c</fullName>
    <label>20 Group Survey Post Meeting Follow Up</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>