unpackaged/main/default/objects/GetFeedBack_Results__c/fields/Years_worked_in_dealership__c.field-meta.xml
<CustomField>
    <fullName>Years_worked_in_dealership__c</fullName>
    <label>Years worked in dealership</label>
    <type>TextArea</type>
</CustomField>