unpackaged/main/default/objects/GetFeedBack_Results__c/recordTypes/Consulting.recordType-meta.xml
<RecordType>
    <fullName>Consulting</fullName>
    <active>true</active>
    <label>Consulting</label>
</RecordType>