unpackaged/main/default/objects/GetFeedBack_Results__c/recordTypes/NCM_Institute_Survey.recordType-meta.xml
<RecordType>
    <fullName>NCM_Institute_Survey</fullName>
    <active>true</active>
    <label>NCM Institute Survey</label>
</RecordType>