unpackaged/main/default/objects/GetFeedBack_Results__c/recordTypes/OnDemand_Test_Drive_Survey.recordType-meta.xml
<RecordType>
    <fullName>OnDemand_Test_Drive_Survey</fullName>
    <active>false</active>
    <label>OnDemand Test Drive Survey</label>
</RecordType>