unpackaged/main/default/objects/GetFeedBack_Results__c/recordTypes/X20_Group_Survey.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_Survey</fullName>
    <active>true</active>
    <label>20 Group Survey</label>
</RecordType>