unpackaged/main/default/objects/GetFeedBack_Results__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>X20_Group_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>