unpackaged/main/default/objects/GetFeedBack_Results__c/listViews/NCMI_Surveys.listView-meta.xml
<ListView>
    <fullName>NCMI_Surveys</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>ncmi</value>
    </filters>
    <label>NCMI Surveys</label>
    <sharedTo>
        <role>Marketing_Manager</role>
        <role>NCM_Institute_Coordinator</role>
        <role>NCMi_Operations_Manager</role>
        <role>SystemAdministrators</role>
    </sharedTo>
</ListView>