unpackaged/main/default/objects/GetFeedBack_Results__c/listViews/New_20_Groups_Survey.listView-meta.xml
<ListView>
    <fullName>New_20_Groups_Survey</fullName>
    <columns>NAME</columns>
    <columns>X20_Group__c</columns>
    <columns>Created_Date__c</columns>
    <columns>How_did_Moderator_manage_the_group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>X20_Group__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>New 20 Groups Survey</label>
</ListView>