unpackaged/main/default/objects/GetFeedBack_Results__c/listViews/OnDemand_Surveys.listView-meta.xml
<ListView>
    <fullName>OnDemand_Surveys</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Test Drive</value>
    </filters>
    <label>OnDemand Surveys</label>
    <sharedTo>
        <role>CEO</role>
        <role>Marketing_Manager</role>
        <role>NCM_Institute_Coordinator</role>
        <role>NCMi_Operations_Manager</role>
        <role>SystemAdministrators</role>
    </sharedTo>
</ListView>